--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Martian+Mono:wght@100&family=Shadows+Into+Light&display=swap');
 body {
     background-color: #d4fcf4; 
+    
+    font-family: 'IBM Plex Mono', 'Martian Mono' , monospace;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color:rgba(88, 236, 226, 0.7);
@@ -12,6 +21,10 @@ nav a:hover {
     background-color: rgb(81, 245, 198);
     color: #120202;
     text-decoration: none;
+    font-size: 18px;
+    padding:15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 } 
 .book:hover, .join:hover {
     background-color: rgb(83, 218, 239);
@@ -20,9 +33,7 @@ nav a:hover {
 #background {
     background-color: rgb(31, 163, 168);
 }
-.msg {
-    background-color:rgba(88, 236, 226, 0.7);
-}
+
 #content {
     max-width: 1600px;
     margin:0 auto;
@@ -32,6 +43,7 @@ nav a {
     background-color: rgb(183, 242, 250);
     color: #080502;
     text-decoration: none;
+    padding: 35px;
 }
   
 #hero-msg h1, #hero-msg h4 {
@@ -50,16 +62,26 @@ main section {
 }
 .home-title {
     color: #080502;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 2em;
+    margin-top: 10px;
 }
+
 h4 {
     color: #080502;
 }
-
+.msg {
+    background-color:rgba(88, 236, 226, 0.7);
+    line-height: 1.5em;
+    padding: 35px;
+}
 .msg h2 {
     color: #0b0b0b;
 }
 .msg p {
     color: #080502;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 .riskyrafting, .icon {
     width: 80px;
@@ -69,6 +91,8 @@ h4 {
 }
 footer {
     background-color:rgba(88, 236, 226, 0.7);
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color: #080502;
@@ -83,3 +107,22 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }  
+footer .social img {
+    padding-top: 15px;
+}
+#riskyrafting_link {
+    padding-top: 5px;
+}
+.icon {
+    padding-top: 10px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid #1deac8;
+}
+main section img {
+    box-sizing: border-box;
+}
+     
