--- a/positionstyles.css
+++ b/positionstyles.css
@@ -156,7 +156,7 @@
   /* This is the parent of the activity 6 boxes. */
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 100px);
+  grid-template-rows: repeat(6, 1fr);
   grid-gap: 0;
   width: 600px;
 }
@@ -172,20 +172,20 @@
   width: 200px;
   height: 200px;
   background-color: green;
-  grid-column: 1/3;
-  grid-row: 5/7;
+  grid-column: 1/2;
+  grid-row: 5/6;
   z-index: 3;
 }
 .yellow6 {
   width: 200px;
   height: 400px;
   background-color: gold;
-  grid-column: 6/7;
+  grid-column: 5/7;
   grid-row: 3/6;
   z-index: 4;
 }
 .blue6 {
-  width: 450px;
+  width: 400px;
   height: 400px;
   background-color: blue;
   grid-column: 2/5;
