--- a/positionstyles.css
+++ b/positionstyles.css
@@ -156,7 +156,7 @@
   /* This is the parent of the activity 6 boxes. */
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 100px);
   grid-gap: 0;
   width: 600px;
 }
@@ -172,17 +172,17 @@
   width: 200px;
   height: 200px;
   background-color: green;
-  grid-column: 1/2;
-  grid-row: 5/6;
+  grid-column: 1/3;
+  grid-row: 5/7;
   z-index: 3;
 }
 .yellow6 {
   width: 200px;
   height: 400px;
   background-color: gold;
-  grid-column: 5/7;
+  grid-column: 6/7;
   grid-row: 3/6;
-  z-index: 4;
+  z-index: 5;
 }
 .blue6 {
   width: 400px;
