--- a/positionstyles.css
+++ b/positionstyles.css
@@ -158,7 +158,8 @@
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 100px);
   grid-gap: 0;
-  width: 600px;
+  width: 608px;
+  height:606px;
 }
 .red6 {
   width: 400px;
