--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Martian+Mono:wght@100&family=Shadows+Into+Light&display=swap');
 body {
-    background-color: #d4fcf4; 
-    
+    background-color: #92d5c7;    
     font-family: 'IBM Plex Mono', 'Martian Mono' , monospace;
     font-size: 22px;
     margin: 0;
@@ -11,14 +10,16 @@ h2 {
     margin: 0;
 }
 header {
-    background-color:rgba(88, 236, 226, 0.7);
+    background-color:rgba(172, 233, 229, 0.7);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover {
-    background-color: rgb(70, 229, 216);
+    background-color: rgba(172, 233, 229, 0.7);
     color: black;
 }
 .book, .join {
-    background-color: rgb(81, 245, 198);
+    background-color: rgb(165, 228, 227);
     color: #120202;
     text-decoration: none;
     font-size: 18px;
@@ -27,11 +28,12 @@ nav a:hover {
     border-radius: 5px;
 } 
 .book:hover, .join:hover {
-    background-color: rgb(83, 218, 239);
+    background-color: rgba(123, 230, 222, 0.7);
     color: rgb(19, 19, 19);
 }       
 #background {
     background-color: rgb(31, 163, 168);
+    height: 725px;
 }
 
 #content {
@@ -40,7 +42,7 @@ nav a:hover {
 }
 nav a {
     text-align: center;
-    background-color: rgb(183, 242, 250);
+    background-color: rgb(75, 215, 201);
     color: #080502;
     text-decoration: none;
     padding: 35px;
@@ -57,11 +59,9 @@ nav a {
 main section {
     text-align: center;
 }
-#background {
-    height: 725px;
-}
+
 .home-title {
-    color: #080502;
+    color: #f4eee8;
     font-family: 'Shadows Into Light', cursive;
     font-size: 2em;
     margin-top: 10px;
@@ -74,6 +74,9 @@ h4 {
     background-color:rgba(88, 236, 226, 0.7);
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #0df4d9;
 }
 .msg h2 {
     color: #0b0b0b;
@@ -89,10 +92,32 @@ h4 {
 #hero-img {
     width: 100%;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}   
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+
+}
+#hero-msg h4 {
+    color: white;
+}
 footer {
     background-color:rgba(88, 236, 226, 0.7);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     color: #080502;
@@ -112,6 +137,8 @@ footer .social img {
 }
 #riskyrafting_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon {
     padding-top: 10px;
@@ -121,8 +148,99 @@ footer .social img {
 }
 .card-img {
     border: 10px solid #1deac8;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #0ca392;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}      
 main section img {
     box-sizing: border-box;
 }
-     
+
+/*week07*/
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);  
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4; 
+    grid-row: 2/3; 
+}
+
+.camping-card {
+    grid-column: 5/7; 
+    grid-row: 2/3; 
+}
+
+.rapids-card {
+    grid-column: 8/10; 
+    grid-row: 2/3; 
+}
+
+#background {
+    grid-column: 1/11; 
+    grid-row: 4/9; 
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0df4d9;
+}
+
+.msg {
+    grid-column: 6/10; 
+    grid-row: 6/7; 
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #ebf3f2;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
