--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -203,6 +203,60 @@ nav {
     grid-column: 6/10; 
     grid-row: 6/7; 
 }
+
+/*week09*/
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 1.5rem;
+
+}
+.about-text h2 {
+    color: black;
+    font-size: 60px;
+}
+
+.about-text p {
+    color: rgb(16, 16, 17);
+    font-size: 20px;
+    line-height: 1.5;
+    margin-bottom: 4rem;
+    padding: 10px;
+  }
+
+.about-img img{
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    margin: 10%;
+
+}
+.aboutus-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    box-sizing: border-box;
+}
+.question{
+    background:rgba(88, 236, 226, 0.7);
+    margin: 70px;
+    word-wrap: break-word;
+    vertical-align: middle; 
+}
+.aboutus-grid .question h3  {
+    font-size: 16px;
+    padding: 10px;
+}
+.aboutus-grid .question p {
+    font-size: 14px;
+    padding: 10px;
+}
+.aboutus-grid .question li {
+    font-size: 14px;
+    padding: 5px;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -242,5 +296,21 @@ nav {
     }
     footer {
         margin-top: 25px;
+    }
+    /*week09*/
+    .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .about-text {
+        order: 2;
+        margin-top: 20px;
+    }
+    .about-img {
+        order: 0;
+        margin-bottom: 10px;
+    }
+    .about-img img {
+        margin: 1;
     }
 }
