--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -94,6 +94,50 @@ footer p a:hover {
 footer .social img {
     padding-top: 15px;
 }
+/*Services*/
+.services {
+    color: #111111;
+    font-size: 22px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.services-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-gap:40px;
+    margin-top: 50px;
+    flex: 1;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+.services-list div i {
+    font-size: 50px;
+    margin-bottom: 00px;
+    transition: transform 0.3s ease;
+
+}
+.services-list div h1 {
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.services-list div:hover {
+    transform: translateY(-5px)
+}
+.services-img img {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    margin: 10%;
+    flex: 1;
+}
+
 @media screen and (max-width: 900px) {
     nav, footer {
         flex-direction: column;
@@ -119,5 +163,23 @@ footer .social img {
     }
     .home-img img {
         margin: 0;
+    }
+    /*services*/
+    .services-list{
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .services-list div {
+        width: 80%;
+        margin: 0 auto;
+    }
+    .services-img {
+        padding: 0; 
+        order: 1;
+        text-align: center;
+    }
+    .services-img img {
+        margin: 0 auto; 
+        display: block;
     }
 }
