--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Martian+Mono:wght@100&family=Shadows+Into+Light&display=swap');
 body {
-    background-color: #eacee5;    
+    background-color: #fcd6f9;    
     font-family: 'IBM Plex Mono', 'Martian Mono' , monospace;
     font-size: 22px;
     margin: 0;
@@ -18,8 +18,8 @@ h2 {
     margin: 0;
 }
 nav a:hover {
-    background-color: rgba(246, 193, 243, 0.7);
-    color: black;
+    background-color: rgb(26, 26, 26);
+    color: #ceafff;
 }
 nav {
     display: flex;
@@ -27,13 +27,13 @@ nav {
 }
 nav a {
     text-align: center;
-    background-color: rgb(154, 61, 131);
+    background-color: #ceafff;
     color: #080502;
     text-decoration: none;
     padding: 35px;
 }
 header {
-    background-color:rgba(218, 172, 233, 0.7);
+    background-color:#f6b2ff;
     display: grid;
     grid-template-columns: 150px auto;
 }
@@ -55,7 +55,7 @@ header {
 }
 
 .home-text p {
-    color: rgb(16, 16, 17);
+    color: rgb(26, 26, 27);
     font-size: 20px;
     line-height: 1.5;
     margin-bottom: 4rem;
@@ -83,7 +83,7 @@ footer a {
     text-decoration: none;
 }
 footer a:hover {
-    color: #dc95e7;
+    color: #090609;
 }
 footer p {
     font-size: 1.2em;
