--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Martian+Mono:wght@100&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=New+Tegomin&family=Roboto+Condensed&display=swap');
+
 body {
     background-color: #fcd6f9;    
-    font-family: 'IBM Plex Mono', 'Martian Mono' , monospace;
+ 
+    font-family: 'New Tegomin''Roboto Condensed', sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
