--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -2,8 +2,8 @@
 
 body {
     background-color: #fcd6f9;    
- 
-    font-family: 'New Tegomin''Roboto Condensed', sans-serif;
+    font-family: 'New Tegomin', serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
