--- a/personalsite/styles/style.css
+++ b/personalsite/styles/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #fcd6f9;    
     font-family: 'New Tegomin', serif;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 22px;
+    font-size: 15px;
     margin: 0;
     padding: 0;
 }
@@ -76,11 +76,11 @@ header {
 
 footer {
     background-color:#ceafff;
-    padding: 25px 50px;
-    margin-top: 100px;
+    padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 20px;
 }
 footer a {
     color: #080502;
